--- a/assets/styles/src/sprites.css
+++ b/assets/styles/src/sprites.css
@@ -3,7 +3,7 @@
   background-size: 367px 364px;
 }
 
-.icon.ico_partner {
+.icon.ico_partner_2 {
   width: 245px;
   height: 364px;
   background-position: 0px 0px;
