--- a/assets/styles/src/common/reset.less
+++ b/assets/styles/src/common/reset.less
@@ -1,11 +1,52 @@
 *{
-	margin: 0;
-	padding: 0;
-	outline: 0;
-	background: #f1f1f1;
+	margin:0;
+	padding:0;
+	border:0;
+	outline:0;
+	font-size:100%;
+	vertical-align:baseline;
+	background:transparent;
+	behavior: url('/assets/pie/PIE.htc');
 }
 
-html,body{
+html, body{
 	height: 100%;
-	font-size: 1em;
+}
+
+body {
+	line-height:1;
+}
+
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section {
+	display:block;
+}
+
+ul {
+	list-style:none;
+}
+
+table {
+	border-collapse:collapse;
+	border-spacing:0;
+}
+
+input, select {
+	vertical-align:middle;
+}
+
+.clear {
+	visibility: hidden;
+	display: block;
+	height: 0;
+	clear: both;
+}
+
+a{
+	text-decoration: none;
+	color: inherit;
+	cursor: pointer;
+	&:hover{
+		text-decoration: underline;
+	}
 }
