update importer file

--- a/assets/styles/src/importer.less
+++ b/assets/styles/src/importer.less
@@ -1,1 +1,11 @@
+// Подключаем базовые стили
+@import 'common/mixins.less';
 @import 'common/reset.less';
+@import 'common/variables.less';
+@import 'common/common.less';
+
+// Подключаем стили для блоков
+// Пример:
+// @import 'blocks/header.less';
+// @import 'blocks/aside.less';
+// @import 'blocks/footer.less';
