update styles organization

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -3,5 +3,9 @@
 	%head
 		%meta{:charset => "UTF-8"}/
 		%title Default
+
+		%link{:rel => "stylesheet", :href => "assets/styles/build/production.min.css"}/
 	%body
+
+		%script{src: 'assets/js/build/production.min.js'}
 	
