--- a/app/assets/styles/src/common.styl
+++ b/app/assets/styles/src/common.styl
@@ -1,10 +1,11 @@
 // Подключаем базовые стили
-@import '_sprites'
+@import 'helpers/*'
 
-@import 'helpers/**/*'
+@import 'base/_fonts'
+@import 'base/_reset'
+@import 'base/_base'
 
-@import 'base/fonts'
-@import 'base/reset'
-@import 'base/base'
 
 @import 'blocks/**/*'
+
+@import '_sprites'
