--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -3,5 +3,8 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		title Первый документ
+
+		link(rel="stylesheet", href="assets/foundation/css/app.css")
+		link(rel="stylesheet", href="assets/styles/build/production.min.css")
 	body
-		
+		a.logo(href="")
