--- a/app/assets/styles/src/_sprites.styl
+++ b/app/assets/styles/src/_sprites.styl
@@ -11,88 +11,47 @@ $icon_home = x y offset_x offset_y width height total_width total_height image_p
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet = width height image $spritesheet_sprites;
 */
-$mashina_090001_name = 'mashina_090001';
-$mashina_090001_x = 0px;
-$mashina_090001_y = 0px;
-$mashina_090001_offset_x = 0px;
-$mashina_090001_offset_y = 0px;
-$mashina_090001_width = 385px;
-$mashina_090001_height = 264px;
-$mashina_090001_total_width = 1175px;
-$mashina_090001_total_height = 812px;
-$mashina_090001_image = '../../images/build/sprite.png';
-$mashina_090001 = 0px 0px 0px 0px 385px 264px 1175px 812px '../../images/build/sprite.png' 'mashina_090001';
-$mashina_090007_name = 'mashina_090007';
-$mashina_090007_x = 395px;
-$mashina_090007_y = 0px;
-$mashina_090007_offset_x = -395px;
-$mashina_090007_offset_y = 0px;
-$mashina_090007_width = 385px;
-$mashina_090007_height = 264px;
-$mashina_090007_total_width = 1175px;
-$mashina_090007_total_height = 812px;
-$mashina_090007_image = '../../images/build/sprite.png';
-$mashina_090007 = 395px 0px -395px 0px 385px 264px 1175px 812px '../../images/build/sprite.png' 'mashina_090007';
-$mashina_090013_name = 'mashina_090013';
-$mashina_090013_x = 0px;
-$mashina_090013_y = 274px;
-$mashina_090013_offset_x = 0px;
-$mashina_090013_offset_y = -274px;
-$mashina_090013_width = 385px;
-$mashina_090013_height = 264px;
-$mashina_090013_total_width = 1175px;
-$mashina_090013_total_height = 812px;
-$mashina_090013_image = '../../images/build/sprite.png';
-$mashina_090013 = 0px 274px 0px -274px 385px 264px 1175px 812px '../../images/build/sprite.png' 'mashina_090013';
-$mashina_090019_name = 'mashina_090019';
-$mashina_090019_x = 395px;
-$mashina_090019_y = 274px;
-$mashina_090019_offset_x = -395px;
-$mashina_090019_offset_y = -274px;
-$mashina_090019_width = 385px;
-$mashina_090019_height = 264px;
-$mashina_090019_total_width = 1175px;
-$mashina_090019_total_height = 812px;
-$mashina_090019_image = '../../images/build/sprite.png';
-$mashina_090019 = 395px 274px -395px -274px 385px 264px 1175px 812px '../../images/build/sprite.png' 'mashina_090019';
-$mashina_090025_name = 'mashina_090025';
-$mashina_090025_x = 790px;
-$mashina_090025_y = 0px;
-$mashina_090025_offset_x = -790px;
-$mashina_090025_offset_y = 0px;
-$mashina_090025_width = 385px;
-$mashina_090025_height = 264px;
-$mashina_090025_total_width = 1175px;
-$mashina_090025_total_height = 812px;
-$mashina_090025_image = '../../images/build/sprite.png';
-$mashina_090025 = 790px 0px -790px 0px 385px 264px 1175px 812px '../../images/build/sprite.png' 'mashina_090025';
-$mashina_090031_name = 'mashina_090031';
-$mashina_090031_x = 790px;
-$mashina_090031_y = 274px;
-$mashina_090031_offset_x = -790px;
-$mashina_090031_offset_y = -274px;
-$mashina_090031_width = 385px;
-$mashina_090031_height = 264px;
-$mashina_090031_total_width = 1175px;
-$mashina_090031_total_height = 812px;
-$mashina_090031_image = '../../images/build/sprite.png';
-$mashina_090031 = 790px 274px -790px -274px 385px 264px 1175px 812px '../../images/build/sprite.png' 'mashina_090031';
-$mashina_090037_name = 'mashina_090037';
-$mashina_090037_x = 0px;
-$mashina_090037_y = 548px;
-$mashina_090037_offset_x = 0px;
-$mashina_090037_offset_y = -548px;
-$mashina_090037_width = 385px;
-$mashina_090037_height = 264px;
-$mashina_090037_total_width = 1175px;
-$mashina_090037_total_height = 812px;
-$mashina_090037_image = '../../images/build/sprite.png';
-$mashina_090037 = 0px 548px 0px -548px 385px 264px 1175px 812px '../../images/build/sprite.png' 'mashina_090037';
-$spritesheet_width = 1175px;
-$spritesheet_height = 812px;
+$logo_name = 'logo';
+$logo_x = 0px;
+$logo_y = 0px;
+$logo_offset_x = 0px;
+$logo_offset_y = 0px;
+$logo_width = 104px;
+$logo_height = 26px;
+$logo_total_width = 104px;
+$logo_total_height = 26px;
+$logo_image = '../../images/build/sprite.png';
+$logo = 0px 0px 0px 0px 104px 26px 104px 26px '../../images/build/sprite.png' 'logo';
+$logo@2x_name = 'logo@2x';
+$logo@2x_x = 0px;
+$logo@2x_y = 0px;
+$logo@2x_offset_x = 0px;
+$logo@2x_offset_y = 0px;
+$logo@2x_width = 208px;
+$logo@2x_height = 53px;
+$logo@2x_total_width = 208px;
+$logo@2x_total_height = 53px;
+$logo@2x_image = '../../images/build/sprite@2x.png';
+$logo@2x = 0px 0px 0px 0px 208px 53px 208px 53px '../../images/build/sprite@2x.png' 'logo@2x';
+$spritesheet_width = 104px;
+$spritesheet_height = 26px;
 $spritesheet_image = '../../images/build/sprite.png';
-$spritesheet_sprites = $mashina_090001 $mashina_090007 $mashina_090013 $mashina_090019 $mashina_090025 $mashina_090031 $mashina_090037;
-$spritesheet = 1175px 812px '../../images/build/sprite.png' $spritesheet_sprites;
+$spritesheet_sprites = $logo;
+$spritesheet = 104px 26px '../../images/build/sprite.png' $spritesheet_sprites;
+$retina_spritesheet_width = 208px;
+$retina_spritesheet_height = 53px;
+$retina_spritesheet_image = '../../images/build/sprite@2x.png';
+$retina_spritesheet_sprites = $logo@2x;
+$retina_spritesheet = 208px 53px '../../images/build/sprite@2x.png' $retina_spritesheet_sprites;
+
+/*
+These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
+
+The list formatted variables are intended for mixins like `retinaSprite` and `retinaSprites`.
+*/
+$logo_group_name = 'logo';
+$logo_group = 'logo' $logo $logo@2x;
+$retina_groups = $logo_group;
 
 /*
 The provided mixins are intended to be used with the array-like variables
@@ -129,6 +88,34 @@ sprite($sprite) {
 }
 
 /*
+The `retinaSprite` mixin sets up rules and a media query for a sprite/retina sprite.
+  It should be used with a "retina group" variable.
+
+The media query is from CSS Tricks: https://css-tricks.com/snippets/css/retina-display-media-query/
+
+$icon_home_group = 'icon-home' $icon_home $icon_home_2x;
+
+.icon-home {
+  retinaSprite($icon_home_group)
+}
+*/
+spriteBackgroundSize($sprite) {
+  background-size: $sprite[6] $sprite[7];
+}
+
+retinaSprite($retina_group) {
+  $normal_sprite = $retina_group[1];
+  $retina_sprite = $retina_group[2];
+  sprite($normal_sprite)
+
+  @media (-webkit-min-device-pixel-ratio: 2),
+         (min-resolution: 192dpi) {
+    spriteImage($retina_sprite)
+    spriteBackgroundSize($normal_sprite)
+  }
+}
+
+/*
 The `sprites` mixin generates identical output to the CSS template
   but can be overridden inside of Stylus
 
@@ -142,6 +129,21 @@ sprites($sprites) {
     $sprite_name = $sprite[9];
     .{$sprite_name} {
       sprite($sprite);
+    }
+  }
+}
+
+/*
+The `retinaSprites` mixin generates a CSS rule and media query for retina groups
+  This yields the same output as CSS retina template but can be overridden in Stylus
+
+retinaSprites($retina_groups);
+*/
+retinaSprites($retina_groups) {
+  for $retina_group in $retina_groups {
+    $sprite_name = $retina_group[0];
+    .{$sprite_name} {
+      retinaSprite($retina_group);
     }
   }
 }
