--- a/app/assets/styles/src/base/_reset.styl
+++ b/app/assets/styles/src/base/_reset.styl
@@ -1,3 +1,7 @@
+// reset css
+/* `XHTML, HTML4, HTML5 Reset
+----------------------------------------------------------------------------------------------------*/
+
 a,
 abbr,
 acronym,
@@ -93,10 +97,12 @@ xmp {
   padding: 0;
   font-size: 100%;
 }
+
 html,
 body {
   height: 100%;
 }
+
 article,
 aside,
 details,
@@ -118,6 +124,7 @@ section {
 */
   display: block;
 }
+
 b,
 strong {
 /*
@@ -127,6 +134,7 @@ strong {
 */
   font-weight: bold;
 }
+
 img {
   color: transparent;
   font-size: 0;
@@ -137,10 +145,12 @@ img {
 */
   -ms-interpolation-mode: bicubic;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 li {
 /*
   For IE6 + IE7:
@@ -150,10 +160,12 @@ li {
 */
   display: list-item;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 th,
 td,
 caption {
@@ -161,53 +173,42 @@ caption {
   vertical-align: top;
   text-align: left;
 }
+
 q {
   quotes: none;
 }
+
 q:before,
 q:after {
   content: "";
   content: none;
 }
+
 sub,
 sup,
 small {
   font-size: 75%;
 }
+
 sub,
 sup {
   line-height: 0;
   position: relative;
   vertical-align: baseline;
 }
+
 sub {
   bottom: -0.25em;
 }
+
 sup {
   top: -0.5em;
 }
+
 svg {
 /*
   For IE9. Without, occasionally draws shapes
   outside the boundaries of <svg> rectangle.
 */
   overflow: hidden;
-}
-body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 10px;
-  background: #fff;
-}
-.task {
-  padding: 60px 0px;
-}
-.task:nth-child(odd) {
-  background: #e2fffe;
-}
-.mcenter {
-  margin: auto;
-}
-h2 {
-  font-size: 1.6em;
-  margin-top: 20px;
 }
