--- a/app/assets/styles/src/base/_base.styl
+++ b/app/assets/styles/src/base/_base.styl
@@ -4,17 +4,9 @@ body
 	font-size: 10px
 	background: #fff
 
-.task
-	padding: 60px 0px
-	&:nth-child(odd)
-		background: #e2fffe
+.wrapper
+	width 960px
+	margin auto
 	
-
 .mcenter
 	margin: auto
-
-
-h2
-	font-size: 1.6em
-	margin-top: 20px
-
