--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -4,7 +4,22 @@ html(lang="en")
 		meta(charset="UTF-8")
 		title Первый документ
 
-		link(rel="stylesheet", href="assets/foundation/css/app.css")
+		link(rel="stylesheet", href="assets/styles/build/foundation.css")
 		link(rel="stylesheet", href="assets/styles/build/production.min.css")
 	body
 		a.logo(href="")
+
+		footer.footer
+			.wrapper
+				.row
+					.footer__btn.large-2.columns
+						фыв
+					ul.footer__nav.large-4.columns
+						li.footer__nav__item
+							a.footer__nav__link(href="") О проекте
+						li.footer__nav__item
+							a.footer__nav__link(href="") Помощь
+						li.footer__nav__item
+							a.footer__nav__link(href="") Партнерам
+					.large-6.columns
+						вфыв
