--- a/app/assets/styles/src/base/_button.styl
+++ b/app/assets/styles/src/base/_button.styl
@@ -4,8 +4,11 @@
 	padding 0
 	border-radius 3px
 	font-weight 600
-	font(14px, 37px)
+	font(18px, 37px)
 	size(100%, 37px)
 	&:hover
 		color white
 		text-decoration none
+		
+	&__footer
+		font-size 14px
