--- a/app/assets/styles/src/common.styl
+++ b/app/assets/styles/src/common.styl
@@ -1,7 +1,6 @@
 // Подключаем базовые стили
 @import 'helpers/*'
 
-@import '_sprites'
 @import 'base/_fonts'
 @import 'base/_reset'
 @import 'base/_base'
@@ -9,3 +8,7 @@
 
 
 @import 'blocks/**/*'
+
+@import '_sprites'
+
+retinaSprites($retina_groups);
