--- a/app/assets/styles/src/_sprites.styl
+++ b/app/assets/styles/src/_sprites.styl
@@ -11,47 +11,143 @@ $icon_home = x y offset_x offset_y width height total_width total_height image_p
 At the bottom of this section, we provide information about the spritesheet itself
 $spritesheet = width height image $spritesheet_sprites;
 */
-$logo_name = 'logo';
-$logo_x = 0px;
-$logo_y = 0px;
-$logo_offset_x = 0px;
-$logo_offset_y = 0px;
-$logo_width = 104px;
-$logo_height = 26px;
-$logo_total_width = 104px;
-$logo_total_height = 26px;
-$logo_image = '../../images/build/sprite.png';
-$logo = 0px 0px 0px 0px 104px 26px 104px 26px '../../images/build/sprite.png' 'logo';
-$logo_2x_name = 'logo-2x';
-$logo_2x_x = 0px;
-$logo_2x_y = 0px;
-$logo_2x_offset_x = 0px;
-$logo_2x_offset_y = 0px;
-$logo_2x_width = 208px;
-$logo_2x_height = 53px;
-$logo_2x_total_width = 208px;
-$logo_2x_total_height = 53px;
-$logo_2x_image = '../../images/build/sprite@2x.png';
-$logo_2x = 0px 0px 0px 0px 208px 53px 208px 53px '../../images/build/sprite@2x.png' 'logo-2x';
-$spritesheet_width = 104px;
-$spritesheet_height = 26px;
+$sprite_logo_name = 'sprite_logo';
+$sprite_logo_x = 0px;
+$sprite_logo_y = 104px;
+$sprite_logo_offset_x = 0px;
+$sprite_logo_offset_y = -104px;
+$sprite_logo_width = 104px;
+$sprite_logo_height = 26px;
+$sprite_logo_total_width = 224px;
+$sprite_logo_total_height = 130px;
+$sprite_logo_image = '../../images/build/sprite.png';
+$sprite_logo = 0px 104px 0px -104px 104px 26px 224px 130px '../../images/build/sprite.png' 'sprite_logo';
+$sprite_promo_bags_name = 'sprite_promo-bags';
+$sprite_promo_bags_x = 0px;
+$sprite_promo_bags_y = 0px;
+$sprite_promo_bags_offset_x = 0px;
+$sprite_promo_bags_offset_y = 0px;
+$sprite_promo_bags_width = 71px;
+$sprite_promo_bags_height = 60px;
+$sprite_promo_bags_total_width = 224px;
+$sprite_promo_bags_total_height = 130px;
+$sprite_promo_bags_image = '../../images/build/sprite.png';
+$sprite_promo_bags = 0px 0px 0px 0px 71px 60px 224px 130px '../../images/build/sprite.png' 'sprite_promo-bags';
+$sprite_promo_bowtie_name = 'sprite_promo-bowtie';
+$sprite_promo_bowtie_x = 0px;
+$sprite_promo_bowtie_y = 61px;
+$sprite_promo_bowtie_offset_x = 0px;
+$sprite_promo_bowtie_offset_y = -61px;
+$sprite_promo_bowtie_width = 73px;
+$sprite_promo_bowtie_height = 42px;
+$sprite_promo_bowtie_total_width = 224px;
+$sprite_promo_bowtie_total_height = 130px;
+$sprite_promo_bowtie_image = '../../images/build/sprite.png';
+$sprite_promo_bowtie = 0px 61px 0px -61px 73px 42px 224px 130px '../../images/build/sprite.png' 'sprite_promo-bowtie';
+$sprite_promo_glasses_name = 'sprite_promo-glasses';
+$sprite_promo_glasses_x = 145px;
+$sprite_promo_glasses_y = 0px;
+$sprite_promo_glasses_offset_x = -145px;
+$sprite_promo_glasses_offset_y = 0px;
+$sprite_promo_glasses_width = 79px;
+$sprite_promo_glasses_height = 24px;
+$sprite_promo_glasses_total_width = 224px;
+$sprite_promo_glasses_total_height = 130px;
+$sprite_promo_glasses_image = '../../images/build/sprite.png';
+$sprite_promo_glasses = 145px 0px -145px 0px 79px 24px 224px 130px '../../images/build/sprite.png' 'sprite_promo-glasses';
+$sprite_promo_hanger_name = 'sprite_promo-hanger';
+$sprite_promo_hanger_x = 72px;
+$sprite_promo_hanger_y = 0px;
+$sprite_promo_hanger_offset_x = -72px;
+$sprite_promo_hanger_offset_y = 0px;
+$sprite_promo_hanger_width = 72px;
+$sprite_promo_hanger_height = 47px;
+$sprite_promo_hanger_total_width = 224px;
+$sprite_promo_hanger_total_height = 130px;
+$sprite_promo_hanger_image = '../../images/build/sprite.png';
+$sprite_promo_hanger = 72px 0px -72px 0px 72px 47px 224px 130px '../../images/build/sprite.png' 'sprite_promo-hanger';
+$sprite_logo_2x_name = 'sprite_logo-2x';
+$sprite_logo_2x_x = 0px;
+$sprite_logo_2x_y = 208px;
+$sprite_logo_2x_offset_x = 0px;
+$sprite_logo_2x_offset_y = -208px;
+$sprite_logo_2x_width = 208px;
+$sprite_logo_2x_height = 53px;
+$sprite_logo_2x_total_width = 448px;
+$sprite_logo_2x_total_height = 261px;
+$sprite_logo_2x_image = '../../images/build/sprite@2x.png';
+$sprite_logo_2x = 0px 208px 0px -208px 208px 53px 448px 261px '../../images/build/sprite@2x.png' 'sprite_logo-2x';
+$sprite_promo_bags_2x_name = 'sprite_promo-bags-2x';
+$sprite_promo_bags_2x_x = 0px;
+$sprite_promo_bags_2x_y = 0px;
+$sprite_promo_bags_2x_offset_x = 0px;
+$sprite_promo_bags_2x_offset_y = 0px;
+$sprite_promo_bags_2x_width = 142px;
+$sprite_promo_bags_2x_height = 120px;
+$sprite_promo_bags_2x_total_width = 448px;
+$sprite_promo_bags_2x_total_height = 261px;
+$sprite_promo_bags_2x_image = '../../images/build/sprite@2x.png';
+$sprite_promo_bags_2x = 0px 0px 0px 0px 142px 120px 448px 261px '../../images/build/sprite@2x.png' 'sprite_promo-bags-2x';
+$sprite_promo_bowtie_2x_name = 'sprite_promo-bowtie-2x';
+$sprite_promo_bowtie_2x_x = 0px;
+$sprite_promo_bowtie_2x_y = 122px;
+$sprite_promo_bowtie_2x_offset_x = 0px;
+$sprite_promo_bowtie_2x_offset_y = -122px;
+$sprite_promo_bowtie_2x_width = 146px;
+$sprite_promo_bowtie_2x_height = 84px;
+$sprite_promo_bowtie_2x_total_width = 448px;
+$sprite_promo_bowtie_2x_total_height = 261px;
+$sprite_promo_bowtie_2x_image = '../../images/build/sprite@2x.png';
+$sprite_promo_bowtie_2x = 0px 122px 0px -122px 146px 84px 448px 261px '../../images/build/sprite@2x.png' 'sprite_promo-bowtie-2x';
+$sprite_promo_glasses_2x_name = 'sprite_promo-glasses-2x';
+$sprite_promo_glasses_2x_x = 290px;
+$sprite_promo_glasses_2x_y = 0px;
+$sprite_promo_glasses_2x_offset_x = -290px;
+$sprite_promo_glasses_2x_offset_y = 0px;
+$sprite_promo_glasses_2x_width = 158px;
+$sprite_promo_glasses_2x_height = 48px;
+$sprite_promo_glasses_2x_total_width = 448px;
+$sprite_promo_glasses_2x_total_height = 261px;
+$sprite_promo_glasses_2x_image = '../../images/build/sprite@2x.png';
+$sprite_promo_glasses_2x = 290px 0px -290px 0px 158px 48px 448px 261px '../../images/build/sprite@2x.png' 'sprite_promo-glasses-2x';
+$sprite_promo_hanger_2x_name = 'sprite_promo-hanger-2x';
+$sprite_promo_hanger_2x_x = 144px;
+$sprite_promo_hanger_2x_y = 0px;
+$sprite_promo_hanger_2x_offset_x = -144px;
+$sprite_promo_hanger_2x_offset_y = 0px;
+$sprite_promo_hanger_2x_width = 144px;
+$sprite_promo_hanger_2x_height = 94px;
+$sprite_promo_hanger_2x_total_width = 448px;
+$sprite_promo_hanger_2x_total_height = 261px;
+$sprite_promo_hanger_2x_image = '../../images/build/sprite@2x.png';
+$sprite_promo_hanger_2x = 144px 0px -144px 0px 144px 94px 448px 261px '../../images/build/sprite@2x.png' 'sprite_promo-hanger-2x';
+$spritesheet_width = 224px;
+$spritesheet_height = 130px;
 $spritesheet_image = '../../images/build/sprite.png';
-$spritesheet_sprites = $logo;
-$spritesheet = 104px 26px '../../images/build/sprite.png' $spritesheet_sprites;
-$retina_spritesheet_width = 208px;
-$retina_spritesheet_height = 53px;
+$spritesheet_sprites = $sprite_logo $sprite_promo_bags $sprite_promo_bowtie $sprite_promo_glasses $sprite_promo_hanger;
+$spritesheet = 224px 130px '../../images/build/sprite.png' $spritesheet_sprites;
+$retina_spritesheet_width = 448px;
+$retina_spritesheet_height = 261px;
 $retina_spritesheet_image = '../../images/build/sprite@2x.png';
-$retina_spritesheet_sprites = $logo_2x;
-$retina_spritesheet = 208px 53px '../../images/build/sprite@2x.png' $retina_spritesheet_sprites;
+$retina_spritesheet_sprites = $sprite_logo_2x $sprite_promo_bags_2x $sprite_promo_bowtie_2x $sprite_promo_glasses_2x $sprite_promo_hanger_2x;
+$retina_spritesheet = 448px 261px '../../images/build/sprite@2x.png' $retina_spritesheet_sprites;
 
 /*
 These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
 
 The list formatted variables are intended for mixins like `retinaSprite` and `retinaSprites`.
 */
-$logo_group_name = 'logo';
-$logo_group = 'logo' $logo $logo_2x;
-$retina_groups = $logo_group;
+$sprite_logo_group_name = 'sprite_logo';
+$sprite_logo_group = 'sprite_logo' $sprite_logo $sprite_logo_2x;
+$sprite_promo_bags_group_name = 'sprite_promo-bags';
+$sprite_promo_bags_group = 'sprite_promo-bags' $sprite_promo_bags $sprite_promo_bags_2x;
+$sprite_promo_bowtie_group_name = 'sprite_promo-bowtie';
+$sprite_promo_bowtie_group = 'sprite_promo-bowtie' $sprite_promo_bowtie $sprite_promo_bowtie_2x;
+$sprite_promo_glasses_group_name = 'sprite_promo-glasses';
+$sprite_promo_glasses_group = 'sprite_promo-glasses' $sprite_promo_glasses $sprite_promo_glasses_2x;
+$sprite_promo_hanger_group_name = 'sprite_promo-hanger';
+$sprite_promo_hanger_group = 'sprite_promo-hanger' $sprite_promo_hanger $sprite_promo_hanger_2x;
+$retina_groups = $sprite_logo_group $sprite_promo_bags_group $sprite_promo_bowtie_group $sprite_promo_glasses_group $sprite_promo_hanger_group;
 
 /*
 The provided mixins are intended to be used with the array-like variables
