--- a/app/assets/styles/src/blocks/_catalog.styl
+++ b/app/assets/styles/src/blocks/_catalog.styl
@@ -1,6 +1,10 @@
 .catalog
 	padding 55px 80px
 	
+	&_inner
+		background #f0f0f0
+		padding 55px 0px 120px
+	
 	&__list
 		margin-bottom 40px
 		&__item
