--- a/app/assets/styles/src/blocks/_header.styl
+++ b/app/assets/styles/src/blocks/_header.styl
@@ -1,4 +1,26 @@
 // Header
-.logo
-	display block
-	sprite($logo)
+.header
+	position fixed
+	z-index 99
+	padding 18px 20px
+	size(100%, 60px)
+	clearfix()
+	
+	&_promo
+		color white
+		
+	&__logo
+		display block
+		float left
+		
+	&__nav
+		float right
+		
+		&__list
+			width 420px
+			clearfix()
+			
+		&__item
+			margin-right 30px
+			float left
+			font(14px, 26px)
