add stylist catalog

--- a/app/assets/styles/src/_sprites.styl
+++ b/app/assets/styles/src/_sprites.styl
@@ -18,10 +18,21 @@ $sprite_logo_offset_x = 0px;
 $sprite_logo_offset_y = -104px;
 $sprite_logo_width = 104px;
 $sprite_logo_height = 26px;
-$sprite_logo_total_width = 224px;
+$sprite_logo_total_width = 249px;
 $sprite_logo_total_height = 130px;
 $sprite_logo_image = '../../images/build/sprite.png';
-$sprite_logo = 0px 104px 0px -104px 104px 26px 224px 130px '../../images/build/sprite.png' 'sprite_logo';
+$sprite_logo = 0px 104px 0px -104px 104px 26px 249px 130px '../../images/build/sprite.png' 'sprite_logo';
+$sprite_logo_inner_name = 'sprite_logo_inner';
+$sprite_logo_inner_x = 145px;
+$sprite_logo_inner_y = 0px;
+$sprite_logo_inner_offset_x = -145px;
+$sprite_logo_inner_offset_y = 0px;
+$sprite_logo_inner_width = 104px;
+$sprite_logo_inner_height = 26px;
+$sprite_logo_inner_total_width = 249px;
+$sprite_logo_inner_total_height = 130px;
+$sprite_logo_inner_image = '../../images/build/sprite.png';
+$sprite_logo_inner = 145px 0px -145px 0px 104px 26px 249px 130px '../../images/build/sprite.png' 'sprite_logo_inner';
 $sprite_promo_bags_name = 'sprite_promo-bags';
 $sprite_promo_bags_x = 0px;
 $sprite_promo_bags_y = 0px;
@@ -29,10 +40,10 @@ $sprite_promo_bags_offset_x = 0px;
 $sprite_promo_bags_offset_y = 0px;
 $sprite_promo_bags_width = 71px;
 $sprite_promo_bags_height = 60px;
-$sprite_promo_bags_total_width = 224px;
+$sprite_promo_bags_total_width = 249px;
 $sprite_promo_bags_total_height = 130px;
 $sprite_promo_bags_image = '../../images/build/sprite.png';
-$sprite_promo_bags = 0px 0px 0px 0px 71px 60px 224px 130px '../../images/build/sprite.png' 'sprite_promo-bags';
+$sprite_promo_bags = 0px 0px 0px 0px 71px 60px 249px 130px '../../images/build/sprite.png' 'sprite_promo-bags';
 $sprite_promo_bowtie_name = 'sprite_promo-bowtie';
 $sprite_promo_bowtie_x = 0px;
 $sprite_promo_bowtie_y = 61px;
@@ -40,21 +51,21 @@ $sprite_promo_bowtie_offset_x = 0px;
 $sprite_promo_bowtie_offset_y = -61px;
 $sprite_promo_bowtie_width = 73px;
 $sprite_promo_bowtie_height = 42px;
-$sprite_promo_bowtie_total_width = 224px;
+$sprite_promo_bowtie_total_width = 249px;
 $sprite_promo_bowtie_total_height = 130px;
 $sprite_promo_bowtie_image = '../../images/build/sprite.png';
-$sprite_promo_bowtie = 0px 61px 0px -61px 73px 42px 224px 130px '../../images/build/sprite.png' 'sprite_promo-bowtie';
+$sprite_promo_bowtie = 0px 61px 0px -61px 73px 42px 249px 130px '../../images/build/sprite.png' 'sprite_promo-bowtie';
 $sprite_promo_glasses_name = 'sprite_promo-glasses';
 $sprite_promo_glasses_x = 145px;
-$sprite_promo_glasses_y = 0px;
+$sprite_promo_glasses_y = 27px;
 $sprite_promo_glasses_offset_x = -145px;
-$sprite_promo_glasses_offset_y = 0px;
+$sprite_promo_glasses_offset_y = -27px;
 $sprite_promo_glasses_width = 79px;
 $sprite_promo_glasses_height = 24px;
-$sprite_promo_glasses_total_width = 224px;
+$sprite_promo_glasses_total_width = 249px;
 $sprite_promo_glasses_total_height = 130px;
 $sprite_promo_glasses_image = '../../images/build/sprite.png';
-$sprite_promo_glasses = 145px 0px -145px 0px 79px 24px 224px 130px '../../images/build/sprite.png' 'sprite_promo-glasses';
+$sprite_promo_glasses = 145px 27px -145px -27px 79px 24px 249px 130px '../../images/build/sprite.png' 'sprite_promo-glasses';
 $sprite_promo_hanger_name = 'sprite_promo-hanger';
 $sprite_promo_hanger_x = 72px;
 $sprite_promo_hanger_y = 0px;
@@ -62,10 +73,54 @@ $sprite_promo_hanger_offset_x = -72px;
 $sprite_promo_hanger_offset_y = 0px;
 $sprite_promo_hanger_width = 72px;
 $sprite_promo_hanger_height = 47px;
-$sprite_promo_hanger_total_width = 224px;
+$sprite_promo_hanger_total_width = 249px;
 $sprite_promo_hanger_total_height = 130px;
 $sprite_promo_hanger_image = '../../images/build/sprite.png';
-$sprite_promo_hanger = 72px 0px -72px 0px 72px 47px 224px 130px '../../images/build/sprite.png' 'sprite_promo-hanger';
+$sprite_promo_hanger = 72px 0px -72px 0px 72px 47px 249px 130px '../../images/build/sprite.png' 'sprite_promo-hanger';
+$sprite_rating_empty_name = 'sprite_rating_empty';
+$sprite_rating_empty_x = 225px;
+$sprite_rating_empty_y = 27px;
+$sprite_rating_empty_offset_x = -225px;
+$sprite_rating_empty_offset_y = -27px;
+$sprite_rating_empty_width = 17px;
+$sprite_rating_empty_height = 16px;
+$sprite_rating_empty_total_width = 249px;
+$sprite_rating_empty_total_height = 130px;
+$sprite_rating_empty_image = '../../images/build/sprite.png';
+$sprite_rating_empty = 225px 27px -225px -27px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_empty';
+$sprite_rating_empty_white_name = 'sprite_rating_empty_white';
+$sprite_rating_empty_white_x = 145px;
+$sprite_rating_empty_white_y = 52px;
+$sprite_rating_empty_white_offset_x = -145px;
+$sprite_rating_empty_white_offset_y = -52px;
+$sprite_rating_empty_white_width = 17px;
+$sprite_rating_empty_white_height = 16px;
+$sprite_rating_empty_white_total_width = 249px;
+$sprite_rating_empty_white_total_height = 130px;
+$sprite_rating_empty_white_image = '../../images/build/sprite.png';
+$sprite_rating_empty_white = 145px 52px -145px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_empty_white';
+$sprite_rating_full_name = 'sprite_rating_full';
+$sprite_rating_full_x = 163px;
+$sprite_rating_full_y = 52px;
+$sprite_rating_full_offset_x = -163px;
+$sprite_rating_full_offset_y = -52px;
+$sprite_rating_full_width = 17px;
+$sprite_rating_full_height = 16px;
+$sprite_rating_full_total_width = 249px;
+$sprite_rating_full_total_height = 130px;
+$sprite_rating_full_image = '../../images/build/sprite.png';
+$sprite_rating_full = 163px 52px -163px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_full';
+$sprite_rating_full_white_name = 'sprite_rating_full_white';
+$sprite_rating_full_white_x = 181px;
+$sprite_rating_full_white_y = 52px;
+$sprite_rating_full_white_offset_x = -181px;
+$sprite_rating_full_white_offset_y = -52px;
+$sprite_rating_full_white_width = 17px;
+$sprite_rating_full_white_height = 16px;
+$sprite_rating_full_white_total_width = 249px;
+$sprite_rating_full_white_total_height = 130px;
+$sprite_rating_full_white_image = '../../images/build/sprite.png';
+$sprite_rating_full_white = 181px 52px -181px -52px 17px 16px 249px 130px '../../images/build/sprite.png' 'sprite_rating_full_white';
 $sprite_logo_2x_name = 'sprite_logo-2x';
 $sprite_logo_2x_x = 0px;
 $sprite_logo_2x_y = 208px;
@@ -73,10 +128,21 @@ $sprite_logo_2x_offset_x = 0px;
 $sprite_logo_2x_offset_y = -208px;
 $sprite_logo_2x_width = 208px;
 $sprite_logo_2x_height = 53px;
-$sprite_logo_2x_total_width = 448px;
+$sprite_logo_2x_total_width = 498px;
 $sprite_logo_2x_total_height = 261px;
 $sprite_logo_2x_image = '../../images/build/sprite@2x.png';
-$sprite_logo_2x = 0px 208px 0px -208px 208px 53px 448px 261px '../../images/build/sprite@2x.png' 'sprite_logo-2x';
+$sprite_logo_2x = 0px 208px 0px -208px 208px 53px 498px 261px '../../images/build/sprite@2x.png' 'sprite_logo-2x';
+$sprite_logo_inner_2x_name = 'sprite_logo_inner-2x';
+$sprite_logo_inner_2x_x = 290px;
+$sprite_logo_inner_2x_y = 0px;
+$sprite_logo_inner_2x_offset_x = -290px;
+$sprite_logo_inner_2x_offset_y = 0px;
+$sprite_logo_inner_2x_width = 208px;
+$sprite_logo_inner_2x_height = 53px;
+$sprite_logo_inner_2x_total_width = 498px;
+$sprite_logo_inner_2x_total_height = 261px;
+$sprite_logo_inner_2x_image = '../../images/build/sprite@2x.png';
+$sprite_logo_inner_2x = 290px 0px -290px 0px 208px 53px 498px 261px '../../images/build/sprite@2x.png' 'sprite_logo_inner-2x';
 $sprite_promo_bags_2x_name = 'sprite_promo-bags-2x';
 $sprite_promo_bags_2x_x = 0px;
 $sprite_promo_bags_2x_y = 0px;
@@ -84,10 +150,10 @@ $sprite_promo_bags_2x_offset_x = 0px;
 $sprite_promo_bags_2x_offset_y = 0px;
 $sprite_promo_bags_2x_width = 142px;
 $sprite_promo_bags_2x_height = 120px;
-$sprite_promo_bags_2x_total_width = 448px;
+$sprite_promo_bags_2x_total_width = 498px;
 $sprite_promo_bags_2x_total_height = 261px;
 $sprite_promo_bags_2x_image = '../../images/build/sprite@2x.png';
-$sprite_promo_bags_2x = 0px 0px 0px 0px 142px 120px 448px 261px '../../images/build/sprite@2x.png' 'sprite_promo-bags-2x';
+$sprite_promo_bags_2x = 0px 0px 0px 0px 142px 120px 498px 261px '../../images/build/sprite@2x.png' 'sprite_promo-bags-2x';
 $sprite_promo_bowtie_2x_name = 'sprite_promo-bowtie-2x';
 $sprite_promo_bowtie_2x_x = 0px;
 $sprite_promo_bowtie_2x_y = 122px;
@@ -95,21 +161,21 @@ $sprite_promo_bowtie_2x_offset_x = 0px;
 $sprite_promo_bowtie_2x_offset_y = -122px;
 $sprite_promo_bowtie_2x_width = 146px;
 $sprite_promo_bowtie_2x_height = 84px;
-$sprite_promo_bowtie_2x_total_width = 448px;
+$sprite_promo_bowtie_2x_total_width = 498px;
 $sprite_promo_bowtie_2x_total_height = 261px;
 $sprite_promo_bowtie_2x_image = '../../images/build/sprite@2x.png';
-$sprite_promo_bowtie_2x = 0px 122px 0px -122px 146px 84px 448px 261px '../../images/build/sprite@2x.png' 'sprite_promo-bowtie-2x';
+$sprite_promo_bowtie_2x = 0px 122px 0px -122px 146px 84px 498px 261px '../../images/build/sprite@2x.png' 'sprite_promo-bowtie-2x';
 $sprite_promo_glasses_2x_name = 'sprite_promo-glasses-2x';
 $sprite_promo_glasses_2x_x = 290px;
-$sprite_promo_glasses_2x_y = 0px;
+$sprite_promo_glasses_2x_y = 55px;
 $sprite_promo_glasses_2x_offset_x = -290px;
-$sprite_promo_glasses_2x_offset_y = 0px;
+$sprite_promo_glasses_2x_offset_y = -55px;
 $sprite_promo_glasses_2x_width = 158px;
 $sprite_promo_glasses_2x_height = 48px;
-$sprite_promo_glasses_2x_total_width = 448px;
+$sprite_promo_glasses_2x_total_width = 498px;
 $sprite_promo_glasses_2x_total_height = 261px;
 $sprite_promo_glasses_2x_image = '../../images/build/sprite@2x.png';
-$sprite_promo_glasses_2x = 290px 0px -290px 0px 158px 48px 448px 261px '../../images/build/sprite@2x.png' 'sprite_promo-glasses-2x';
+$sprite_promo_glasses_2x = 290px 55px -290px -55px 158px 48px 498px 261px '../../images/build/sprite@2x.png' 'sprite_promo-glasses-2x';
 $sprite_promo_hanger_2x_name = 'sprite_promo-hanger-2x';
 $sprite_promo_hanger_2x_x = 144px;
 $sprite_promo_hanger_2x_y = 0px;
@@ -117,20 +183,64 @@ $sprite_promo_hanger_2x_offset_x = -144px;
 $sprite_promo_hanger_2x_offset_y = 0px;
 $sprite_promo_hanger_2x_width = 144px;
 $sprite_promo_hanger_2x_height = 94px;
-$sprite_promo_hanger_2x_total_width = 448px;
+$sprite_promo_hanger_2x_total_width = 498px;
 $sprite_promo_hanger_2x_total_height = 261px;
 $sprite_promo_hanger_2x_image = '../../images/build/sprite@2x.png';
-$sprite_promo_hanger_2x = 144px 0px -144px 0px 144px 94px 448px 261px '../../images/build/sprite@2x.png' 'sprite_promo-hanger-2x';
-$spritesheet_width = 224px;
+$sprite_promo_hanger_2x = 144px 0px -144px 0px 144px 94px 498px 261px '../../images/build/sprite@2x.png' 'sprite_promo-hanger-2x';
+$sprite_rating_empty_2x_name = 'sprite_rating_empty-2x';
+$sprite_rating_empty_2x_x = 450px;
+$sprite_rating_empty_2x_y = 55px;
+$sprite_rating_empty_2x_offset_x = -450px;
+$sprite_rating_empty_2x_offset_y = -55px;
+$sprite_rating_empty_2x_width = 34px;
+$sprite_rating_empty_2x_height = 32px;
+$sprite_rating_empty_2x_total_width = 498px;
+$sprite_rating_empty_2x_total_height = 261px;
+$sprite_rating_empty_2x_image = '../../images/build/sprite@2x.png';
+$sprite_rating_empty_2x = 450px 55px -450px -55px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_empty-2x';
+$sprite_rating_empty_white_2x_name = 'sprite_rating_empty_white-2x';
+$sprite_rating_empty_white_2x_x = 290px;
+$sprite_rating_empty_white_2x_y = 105px;
+$sprite_rating_empty_white_2x_offset_x = -290px;
+$sprite_rating_empty_white_2x_offset_y = -105px;
+$sprite_rating_empty_white_2x_width = 34px;
+$sprite_rating_empty_white_2x_height = 32px;
+$sprite_rating_empty_white_2x_total_width = 498px;
+$sprite_rating_empty_white_2x_total_height = 261px;
+$sprite_rating_empty_white_2x_image = '../../images/build/sprite@2x.png';
+$sprite_rating_empty_white_2x = 290px 105px -290px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_empty_white-2x';
+$sprite_rating_full_2x_name = 'sprite_rating_full-2x';
+$sprite_rating_full_2x_x = 326px;
+$sprite_rating_full_2x_y = 105px;
+$sprite_rating_full_2x_offset_x = -326px;
+$sprite_rating_full_2x_offset_y = -105px;
+$sprite_rating_full_2x_width = 34px;
+$sprite_rating_full_2x_height = 32px;
+$sprite_rating_full_2x_total_width = 498px;
+$sprite_rating_full_2x_total_height = 261px;
+$sprite_rating_full_2x_image = '../../images/build/sprite@2x.png';
+$sprite_rating_full_2x = 326px 105px -326px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_full-2x';
+$sprite_rating_full_white_2x_name = 'sprite_rating_full_white-2x';
+$sprite_rating_full_white_2x_x = 362px;
+$sprite_rating_full_white_2x_y = 105px;
+$sprite_rating_full_white_2x_offset_x = -362px;
+$sprite_rating_full_white_2x_offset_y = -105px;
+$sprite_rating_full_white_2x_width = 34px;
+$sprite_rating_full_white_2x_height = 32px;
+$sprite_rating_full_white_2x_total_width = 498px;
+$sprite_rating_full_white_2x_total_height = 261px;
+$sprite_rating_full_white_2x_image = '../../images/build/sprite@2x.png';
+$sprite_rating_full_white_2x = 362px 105px -362px -105px 34px 32px 498px 261px '../../images/build/sprite@2x.png' 'sprite_rating_full_white-2x';
+$spritesheet_width = 249px;
 $spritesheet_height = 130px;
 $spritesheet_image = '../../images/build/sprite.png';
-$spritesheet_sprites = $sprite_logo $sprite_promo_bags $sprite_promo_bowtie $sprite_promo_glasses $sprite_promo_hanger;
-$spritesheet = 224px 130px '../../images/build/sprite.png' $spritesheet_sprites;
-$retina_spritesheet_width = 448px;
+$spritesheet_sprites = $sprite_logo $sprite_logo_inner $sprite_promo_bags $sprite_promo_bowtie $sprite_promo_glasses $sprite_promo_hanger $sprite_rating_empty $sprite_rating_empty_white $sprite_rating_full $sprite_rating_full_white;
+$spritesheet = 249px 130px '../../images/build/sprite.png' $spritesheet_sprites;
+$retina_spritesheet_width = 498px;
 $retina_spritesheet_height = 261px;
 $retina_spritesheet_image = '../../images/build/sprite@2x.png';
-$retina_spritesheet_sprites = $sprite_logo_2x $sprite_promo_bags_2x $sprite_promo_bowtie_2x $sprite_promo_glasses_2x $sprite_promo_hanger_2x;
-$retina_spritesheet = 448px 261px '../../images/build/sprite@2x.png' $retina_spritesheet_sprites;
+$retina_spritesheet_sprites = $sprite_logo_2x $sprite_logo_inner_2x $sprite_promo_bags_2x $sprite_promo_bowtie_2x $sprite_promo_glasses_2x $sprite_promo_hanger_2x $sprite_rating_empty_2x $sprite_rating_empty_white_2x $sprite_rating_full_2x $sprite_rating_full_white_2x;
+$retina_spritesheet = 498px 261px '../../images/build/sprite@2x.png' $retina_spritesheet_sprites;
 
 /*
 These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
@@ -139,6 +249,8 @@ The list formatted variables are intended for mixins like `retinaSprite` and `re
 */
 $sprite_logo_group_name = 'sprite_logo';
 $sprite_logo_group = 'sprite_logo' $sprite_logo $sprite_logo_2x;
+$sprite_logo_inner_group_name = 'sprite_logo_inner';
+$sprite_logo_inner_group = 'sprite_logo_inner' $sprite_logo_inner $sprite_logo_inner_2x;
 $sprite_promo_bags_group_name = 'sprite_promo-bags';
 $sprite_promo_bags_group = 'sprite_promo-bags' $sprite_promo_bags $sprite_promo_bags_2x;
 $sprite_promo_bowtie_group_name = 'sprite_promo-bowtie';
@@ -147,7 +259,15 @@ $sprite_promo_glasses_group_name = 'sprite_promo-glasses';
 $sprite_promo_glasses_group = 'sprite_promo-glasses' $sprite_promo_glasses $sprite_promo_glasses_2x;
 $sprite_promo_hanger_group_name = 'sprite_promo-hanger';
 $sprite_promo_hanger_group = 'sprite_promo-hanger' $sprite_promo_hanger $sprite_promo_hanger_2x;
-$retina_groups = $sprite_logo_group $sprite_promo_bags_group $sprite_promo_bowtie_group $sprite_promo_glasses_group $sprite_promo_hanger_group;
+$sprite_rating_empty_group_name = 'sprite_rating_empty';
+$sprite_rating_empty_group = 'sprite_rating_empty' $sprite_rating_empty $sprite_rating_empty_2x;
+$sprite_rating_empty_white_group_name = 'sprite_rating_empty_white';
+$sprite_rating_empty_white_group = 'sprite_rating_empty_white' $sprite_rating_empty_white $sprite_rating_empty_white_2x;
+$sprite_rating_full_group_name = 'sprite_rating_full';
+$sprite_rating_full_group = 'sprite_rating_full' $sprite_rating_full $sprite_rating_full_2x;
+$sprite_rating_full_white_group_name = 'sprite_rating_full_white';
+$sprite_rating_full_white_group = 'sprite_rating_full_white' $sprite_rating_full_white $sprite_rating_full_white_2x;
+$retina_groups = $sprite_logo_group $sprite_logo_inner_group $sprite_promo_bags_group $sprite_promo_bowtie_group $sprite_promo_glasses_group $sprite_promo_hanger_group $sprite_rating_empty_group $sprite_rating_empty_white_group $sprite_rating_full_group $sprite_rating_full_white_group;
 
 /*
 The provided mixins are intended to be used with the array-like variables
