--- a/app/assets/styles/src/base/_base.styl
+++ b/app/assets/styles/src/base/_base.styl
@@ -2,10 +2,15 @@
 body
 	font-size: 14px
 	background: #fff
+	color $clr_base
 
 .wrapper
 	width 960px
 	margin auto
+	clearfix()
+	
+	&_row
+		padding 0 0.9375rem
 	
 .mcenter
 	margin: auto
