--- a/app/assets/styles/src/blocks/_header.styl
+++ b/app/assets/styles/src/blocks/_header.styl
@@ -1,13 +1,18 @@
 // Header
 .header
 	position fixed
-	z-index 99
+	z-index 199
+	top 0
 	padding 18px 20px
 	size(100%, 60px)
 	clearfix()
 	
 	&_promo
 		color white
+		
+	&_inner
+		background: white
+		border-bottom: 1px solid #dbdbdb
 		
 	&__logo
 		display block
